Ensure download filenames don't cause overlay window to become too wide

--- a/src/components/common/Card/card.module.scss
+++ b/src/components/common/Card/card.module.scss
@@ -240,8 +240,16 @@
       }
       .downloadItem {
         display: grid;
-        grid-template-columns: max-content max-content;
-        grid-gap: 10px 20px;
+        grid-template-columns: 1fr auto;
+
+        > :first-child {
+          > div {
+            width: auto;
+          }
+        }
+        > :last-child {
+          white-space: nowrap;
+        }
       }
     }
 
