--- a/src/components/common/PrimaryButton/primarybutton.module.scss
+++ b/src/components/common/PrimaryButton/primarybutton.module.scss
@@ -41,6 +41,7 @@
       margin: 0;
       padding: 0;
       color: $selected-blue;
+      text-align: left;
       &:hover {
         text-decoration: underline;
       }
